# trivia_gui

./: INSTALLATION_INSTRUCTIONS.md  README.md  distribute_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: deploy.yaml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: api_client.dart  consts.dart  homepage.dart  homepage_large.dart  homepage_mid_small.dart  login.dart  main.dart  rooms.dart  server_settings.dart  signup.dart  theme_provider.dart  utils.dart
lib/Objects/: room.dart  user_score.dart
lib/auth/: login.dart  signup.dart
lib/homepage/: homepage.dart  homepage_appbar.dart  homepage_body.dart  homepage_large.dart  homepage_medium.dart  homepage_small.dart
lib/objects/: room.dart
lib/providers/: leaderboard_provider.dart  (+5 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  test.rs
rust/src/api/: error.rs  mod.rs  session.rs
rust/src/api/request/: close_room.rs  create_room.rs  forgot_password.rs  get_game_results.rs  get_highscores.rs  get_question.rs  get_room_players.rs  get_room_state.rs  get_rooms.rs  get_user_data.rs  join_room.rs  leave_game.rs  leave_room.rs  login.rs  logout.rs  mod.rs  resend_verification_code.rs  signup.rs  start_game.rs  submit_answer.rs  submit_verification_code.rs  update_user_data.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+116 files in other folders)
