[package]
name = "rust_lib_trivia"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }